# Glass_RAG

./: .env.example  GLASS_RAG_产品详细说明文档.md  README.md  pyproject.toml
config/: app.example.yaml
glass_rag/: __init__.py  config.py  factories.py  governance.py  observability.py  schemas.py
glass_rag/api/: main.py
glass_rag/ingestion/: chunker.py  parser.py  pipeline.py
glass_rag/pipelines/: query_pipeline.py
glass_rag/prompts/: templates.py
glass_rag/retrieval/: reranker.py  retrievers.py
glass_rag/services/: application.py
glass_rag/storage/: mongo.py
